--- a/spring-cadastro/src/main/resources/application.properties
+++ b/spring-cadastro/src/main/resources/application.properties
@@ -1,29 +1,12 @@
-# ===============================
-# Configurações do Banco de Dados
-# ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/cadastro_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# BANCO
+spring.datasource.url=jdbc:mysql://localhost:3306/cadastro_db?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
-# ===============================
-# Configurações do JPA/Hibernate 7.x
-# ===============================
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# DIALETO CORRETO PARA HIBERNATE 7.x:
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-# OU tente:
-# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-# ===============================
-# Configurações do Servidor
-# ===============================
-server.port=7070
-server.servlet.context-path=/api
-
-# ===============================
-# Configurações de Timezone
-# ===============================
-spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
+# SERVIDOR
+server.port=7777
